--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
 .vscode/c_cpp_properties.json
 .vscode/launch.json
 .vscode/settings.json
+OSI/Laba5/.vscode/c_cpp_properties.json
+OSI/Laba5/.vscode/launch.json
+OSI/Laba5/.vscode/settings.json
