--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,6 @@
 OSI/Laba5/.vscode/c_cpp_properties.json
 OSI/Laba5/.vscode/launch.json
 OSI/Laba5/.vscode/settings.json
+OSI/Laba6/.vscode/c_cpp_properties.json
+OSI/Laba6/.vscode/launch.json
+OSI/Laba6/.vscode/settings.json
