--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,6 @@ OSI/Laba5/.vscode/settings.json
 OSI/Laba6/.vscode/c_cpp_properties.json
 OSI/Laba6/.vscode/launch.json
 OSI/Laba6/.vscode/settings.json
+OSI/.vscode/c_cpp_properties.json
+OSI/.vscode/launch.json
+OSI/.vscode/settings.json
